tests/errors/syntax.MissingClosingBracket.res
>> Syntax | File: syntax.MissingClosingBracket.art
    error | Line: 2
          | 
          | missing closing square bracket: `]`
          | 
          | near: print [
          |              ^